# mindset-vision

./: .gitignore  README.md  _test.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: integration.yml  quality-check.yml
.github/workflows/illusion-report/: config.yaml  generate_report.py
examples/: explorer.ipynb
examples/classification_linedrawings/: generate_linedrawings_dataset.toml  linedrawings_eval.py
examples/data_generation/: README.md  config.yaml  generate.sh
examples/decoder_classification_embedded_figures/: eval.py  train.py
examples/decoder_regression_ebbinghaus/: eval.py  train.py
examples/similarity_relational_vs_coordinate/: generate_relational_vs_coordinate_dataset.toml
mindset/: __init__.py  cli.py  generate_datasets_from_toml.py  utils.py
mindset/drawing/: affine.py  baker_stimuli.py  base.py  dotted_linedrawings.py  ebbinghaus.py  embedded_figures.py  geometry.py  grayscale_shapes.py  gridded_images.py  jastrow.py  leuven.py  linedrawings.py  muller_lyer.py  ponzo.py  primitives.py  same_different.py  same_different_helpers.py  texturized_blobs.py  texturized_chars.py  texturized_lines.py  thatcher_face.py  thatcher_words.py  tilt.py  transformations.py  uncrowding.py  viewpoint.py  weber_law.py
mindset/generators/: __init__.py  _base.py
mindset/utils/: callbacks.py  dataset_utils.py  finalize.py  generate_default_pars_toml_file.py  misc.py  net_utils.py
mindset_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/utils/: callbacks.py  misc.py  net_utils.py
tests/: test_smoke.py
(+114 files in other folders)
