[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindset-vision"
version = "0.1.0"
description = "Controlled visual datasets for testing DNNs against human vision experiments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.15.0",
    "matplotlib>=3.7.0",
    "natsort>=8.4.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.9.0",
    "pandas>=2.0.0",
    "perlin_noise>=1.12",
    "Pillow>=10.1.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "sty>=1.0.4",
    "toml>=0.10.2",
    "torch>=2.0.0",
    "timm>=1.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.62.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
dev = ["pytest>=7.0", "black>=26.3.1"]

[project.scripts]
mindset = "mindset.cli:main"

[tool.setuptools.packages.find]
include = ["mindset*"]

[tool.setuptools.package-data]
mindset = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
